  translate

File: cms.R
-----------

- Better checking of pith offset names
- Big performance improvement, mostly due to using vector operations instead of a for loop
- Results slightly different (on the order of 1e-15) due to polyroot having been replaced with quadratic formula, order of arithmetic operations etc.
- Helper function now has 2 parameters: no need for cbind() in caller
	
File: corr.rwl.seg.R
--------------------

- Additional parameter in yr.range()

File: glk.R
-----------

- Uses the complete argument name MARGIN instead of MAR

File: helpers.R
---------------

- Additional parameter in yr.range(). Used by all callers.

File: rcs.R
-----------

- Uses warning() instead of cat() in one (unlikely?, impossible?) error
  situation
- Better checking of pith offset names
- yr.range() called in "the big for loop" instead of apply. The loop exists anyway, and there's no need to keep yr.range() of all series at the same time.

File: read.tridas.R
-------------------

- Fixed a bug where a wrong number of derived series was reported in
  summary output
- A performance optimization for the case where ids.from.title is FALSE,
  ids.from.identifiers is TRUE (the defaults), and there are no identifiers

File: series.rwl.plot.R
-----------------------

- Uses complete argument names

File: wavelet.plot.R
--------------------

- Uses complete argument names
- gettext() is used in some default values

File: wavelet.plot.Rd
---------------------

- Uses complete argument names
- Default values match the changes in wavelet.plot.R

File: write.crn.R
-----------------

- Uses complete argument names

* CHANGES IN dplR VERSION 1.4.2
* Ran through Mikko's changes. June 2, 2011. AGB
* Changes below by Mikko Korpela

All .rda data files (change reported June 7, after release in CRAN)
-------------------

- Data files were repackaged by R-Forge using a tight compression
  level. This is done every time R-Forge builds the dplR package, but the